syntax = "proto3";

package pb;

import "portfolio.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message UpdatePortfolioRequest {
  int64 id = 1;
  string name = 2;
}

message UpdatePortfolioResponse {
  Portfolio portfolio = 1;
}